update image paths for Messi and Ronaldo in index.astro

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -65,10 +65,10 @@ if (Astro.request.method === 'POST') {
             <div id="resultData" class="mt-8 text-center">
                 <div class="flex flex-wrap justify-center gap-4">
                     {scorers.includes(players[0]) && (
-                        <img src="/CumpleGolRonaldoMessi/messi.webp" alt="Messi" class="relative w-72 h-96 object-cover bottom-16" style="mask-image: linear-gradient(black 80%, transparent);"/>
+                        <img src="/messi.webp" alt="Messi" class="relative w-72 h-96 object-cover bottom-16" style="mask-image: linear-gradient(black 80%, transparent);"/>
                     )}
                     {scorers.includes(players[1]) && (
-                        <img src="/CumpleGolRonaldoMessi/ronaldo.webp" alt="Ronaldo" class="relative w-72 h-96 object-cover bottom-16 " style="mask-image: linear-gradient(black 90%, transparent);"/>
+                        <img src="/ronaldo.webp" alt="Ronaldo" class="relative w-72 h-96 object-cover bottom-16 " style="mask-image: linear-gradient(black 90%, transparent);"/>
                     )}
                 </div>
             </div>
