update favicon and enhance meta tags for SEO and social sharing

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,9 +6,24 @@ import "../styles/global.css";
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="/balon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<meta
+		name="description"
+		content="¿Messi o Cristiano hicieron gol en tu cumpleaños? Descúbrelo aquí."
+	/>
+		<meta name="keywords" content="GOL, Messi, CR7, Pulga, El Bicho, StevenSsj1" />
+		<meta property="og:title" content="Goles de Messi y Ronaldo en el día de tu cumpleaños" />
+		<meta
+		property="og:description"
+		content="¿Messi o Cristiano hicieron gol en tu cumpleaños? Descúbrelo aquí."
+		<meta property="og:locale" content="es_ES" />
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://cumplegoal.vercel.app/" />
+		<meta property="og:site_name" content="CumpleGOAL" />
+
+	/>
+		<title>CumpleGOAL</title>
 	</head>
 	<body class="bg-white dark:bg-black">
 		<slot />
