add Alpine.js collapse functionality to enhance user interaction in results display

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,6 +23,8 @@ import "../styles/global.css";
 		<meta property="og:site_name" content="CumpleGOAL" />
 
 	/>
+		<script defer src="https://cdn.jsdelivr.net/npm/@alpinejs/collapse@3.x.x/dist/cdn.min.js"></script>
+
 		<title>CumpleGOAL</title>
 	</head>
 	<body class="bg-white dark:bg-black">
